--- a/punt_eltete/views/sale_offer.xml
+++ b/punt_eltete/views/sale_offer.xml
@@ -26,16 +26,17 @@
                         <button name="bor_to_ref" type="object" string="Guardar y continuar" states="BOR" />
 						<button name="bor_to_rcl" type="object" string="Paso 1 y 2" states="BOR" />
                         <button name="ref_to_rcl" type="object" string="Guardar ref cliente" states="REF" />
+						<button name="ocultar_datos" type="object" string="Mostrar / Ocultar datos" attrs="{'invisible': [('ocultar', '=', 'False')]}"  states="REF,RCL"/>
                         <!--<button name="cancel_offer" type="object" string="Cancelar" states="REF,RCL" />-->
                         <field name="state" widget="statusbar"/>
                     </header>
                     <sheet>
                         <group>
-                            <field name="name" attrs="{'invisible': [('state', '!=', 'BOR')]}"/>
-                            <field name="partner_id"/>
+                            <field name="name" attrs="{'invisible': [('state', '!=', 'BOR')]}" invisible="1"/>
+                            <field name="partner_id" attrs="{'readonly': [('state', '!=', 'BOR')]}"/>
                             <field name="user_id"/>
-                            <field name="date"/>
-                            <field name="type_id" domain="[('product_type','=',True)]" options="{'no_create': True, 'no_create_edit':True}"/>
+                            <field name="date" invisible="1"/>
+                            <field name="type_id" domain="[('product_type','=',True)]" options="{'no_create': True, 'no_create_edit':True}"  attrs="{'readonly': [('state', '!=', 'BOR')]}"/>
 							<field name="precio_cliente"/>
                             <field name="is_cantonera" invisible="1"/>
                             <field name="is_perfilu" invisible="1"/>
@@ -45,6 +46,7 @@
                             <field name="is_bobina" invisible="1"/>
                             <field name="is_pieballet" invisible="1"/>
                             <field name="is_varios" invisible="1"/>
+							<field name="ocultar" invisible="1"/>
                         </group>
                         
                         <h3 attrs="{'invisible': [('state', '!=', 'BOR')]}">Referencia</h3>
@@ -52,10 +54,10 @@
                             <field name='ala_1' attrs="{'invisible': [('is_cantonera', '=', False),('is_perfilu', '=', False),('is_slipsheet', '=', False),]}"/>
                             <field name='ancho' attrs="{'invisible': ['|',('is_cantonera', '=', True),('is_pieballet', '=', True),]}"/>
                             <field name='ala_2' attrs="{'invisible': [('is_cantonera', '=', False),('is_perfilu', '=', False),('is_slipsheet', '=', False),]}"/>
-                            <field name='grosor_1' attrs="{'invisible': [('is_slipsheet', '=', False),('is_solidboard', '=', False),]}" />
                             <field name='grosor_2' attrs="{'invisible': [('is_cantonera', '=', False),('is_perfilu', '=', False),]}" />
-                            <field name='longitud' attrs="{'invisible': [('is_bobina', '=', True)]}"/>
                             <field name='ala_3' attrs="{'invisible': [('is_slipsheet', '=', False)]}"/>
+							<field name='longitud' attrs="{'invisible': [('is_bobina', '=', True)]}"/>
+                            <field name='grosor_1' attrs="{'invisible': [('is_slipsheet', '=', False),('is_solidboard', '=', False),]}" />
                             <field name='ala_4' attrs="{'invisible': [('is_slipsheet', '=', False)]}"/>
                             <field name='pie'  attrs="{'invisible': [('is_pieballet', '=', False)]}"/>
                             <field name='diametro'  attrs="{'invisible': [('is_bobina', '=', False)]}"/>
@@ -75,9 +77,10 @@
                         
                         <br/><br/>
                         
-                        <group attrs="{'invisible': [('state', 'in', ['BOR'])]}" >
+                        <group attrs="{'invisible': ['|', ('state', 'in', ['BOR']), ('ocultar', '=', True)]}" >
                             <group>
                                 <h3 attrs="{'invisible': [('state', 'in', ['BOR'])]}">Referencia cliente</h3><br/>
+								<field name="comentario_referencia"/>
                                 <field name="referencia_cliente_nombre"/>
 								<field name="pallet_especial_id"/>
 								<field name="paletizado_cliente" attrs="{'invisible': [('is_cantonera', '=', False)]}"/>
@@ -88,7 +91,7 @@
 								<field name="alto_max_cliente"/>
 								<field name="peso_max_cliente"/>
 								<field name="comentario_paletizado"/>
-								<field name="comentario_referencia"/>
+								
 								
                             </group>
                             <group>
@@ -239,8 +242,8 @@
                             </group>
                         </group>
                         
-                        <br/><br/><h3>Ofertas</h3>
-                        <field name="oferta_ids" context="{'default_attribute_id': active_id,  }">
+                        <!--<br/><br/><h3>Ofertas</h3>
+                        <field name="oferta_ids" context="{'default_attribute_id': active_id,  }" readonly="1">
                             <tree string="Ofertas">
                                 <field name='date' />
                                 <field name='num_pallets' />
@@ -250,7 +253,7 @@
                                 <field name='name' />
                                 <field name='titulo' />
                             </tree>
-                        </field>   
+                        </field>   -->
 
                     </sheet>
                 </form>
@@ -287,13 +290,14 @@
                     <sheet>
                         <group>
                             <group>
-                            
+								<field name="referencia_cliente_id" invisible="1"/>
+								<field name="attribute_id" domain="[('referencia_cliente_id','=', referencia_cliente_id)]" />
                                 <field name='user_id' />
                                 <field name='date' />
                                 <field name='state_id' />
                                 <field name='country_id' />
                                 <field name='tarifa' />
-                                <field name="attribute_id" invisible="1"/>
+                                
                             </group>
                             <group>
                                 <field name='num_pallets' />
