--- a/punt_eltete/views/sale_offer.xml
+++ b/punt_eltete/views/sale_offer.xml
@@ -7,11 +7,9 @@
             <field name="arch" type="xml">
                 <tree string="Producto">
                     <field name="name"/>
-                    <field name="date"/>
+                    <field name="comentario_paletizado"/>
                     <field name="partner_id"/>
                     <field name="user_id"/>                    
-                    <field name="referencia_id"/>
-                    <field name="state"/>
                 </tree>
             </field>
         </record>
@@ -122,15 +120,15 @@
                         <h3 attrs="{'invisible': [('state', 'in', ['BOR', 'REF'])]}">OFERTAS</h3>
                         <field name="oferta_ids" context="{'default_referencia_cliente_id': active_id, }" attrs="{'invisible': [('state', 'in', ['BOR', 'REF'])]}">
                             <tree string="Ofertas">
+								<field name='date' />
                                 <field name='referencia_cliente_id' invisible="1" />
                                 <field name='attribute_id' domain="[('referencia_cliente_id','=', referencia_cliente_id)]" />
-                                <field name='date' />
+								<field name='und_pallet' />
                                 <field name='num_pallets' />
-                                <field name='und_pallet' />
+								<field name='emetro' />
+								<field name='eton' />
                                 <field name='state_id' />
                                 <field name='country_id' />
-                                <field name='titulo' />
-                                <field name='name' />
                             </tree>
                         </field>   
                         
@@ -231,8 +229,6 @@
                                 <field name='cantonera_3' />
                                 <field name='cantonera_4' />
                                 <field name='sierra' />
-                                <field name='fila_max' />
-                                <field name='fila_buena' />
                             </group>
                             <group>
                                 <field name='incremento_metro' />
@@ -269,12 +265,15 @@
             <field name="priority" eval="16"/>
             <field name="arch" type="xml">
                 <tree string="Producto">
-                    <field name='date' />
-                    <field name='num_pallets' />
-                    <field name='state_id' />
-                    <field name='country_id' />
-                    <field name='titulo' />
-                    <field name='name' />
+					<field name='date' />
+                    <field name='referencia_cliente_id' />
+					<field name='attribute_id' />
+					<field name='und_pallet' />
+					<field name='num_pallets' />
+					<field name='emetro' />
+					<field name='eton' />
+					<field name='state_id' />
+					<field name='country_id' />
                 </tree>
             </field>
         </record>
@@ -291,7 +290,7 @@
                         <group>
                             <group>
 								<field name="referencia_cliente_id" invisible="1"/>
-								<field name="attribute_id" domain="[('referencia_cliente_id','=', referencia_cliente_id)]" />
+								<field name="attribute_id" domain="[('referencia_cliente_id','=', referencia_cliente_id)]" context="{'default_referencia_cliente_id': referencia_cliente_id,  }"/>
                                 <field name='user_id' />
                                 <field name='date' />
                                 <field name='state_id' />
@@ -300,6 +299,7 @@
                                 
                             </group>
                             <group>
+								<field name='peso_metro' />
                                 <field name='num_pallets' />
                                 <field name='emetro_user' />
                                 <field name='eton_user' />
