--- a/punt_eltete/views/sale_order.xml
+++ b/punt_eltete/views/sale_order.xml
@@ -57,11 +57,9 @@
 			</xpath>
 			
 			<xpath expr="//field[@name='partner_id']" position="after">
-				<field name="peso_neto"/>
-			</xpath>
-			
-			<xpath expr="//field[@name='amount_total']" position="after">
 				<field name="amount_untaxed"/>
+				<field name="peso_neto"/>
+				<field name="eton"/>
 			</xpath>
 			
 			<xpath expr="//field[@name='state']" position="after">
