--- a/punt_eltete/views/sale_offer.xml
+++ b/punt_eltete/views/sale_offer.xml
@@ -42,6 +42,7 @@
                             <field name="is_formato" invisible="1"/>
                             <field name="is_bobina" invisible="1"/>
                             <field name="is_pieballet" invisible="1"/>
+			    <field name="is_flatboard" invisible="1"/>
                             <field name="is_varios" invisible="1"/>
 			    <field name="ocultar" invisible="1"/>
                         </group>
@@ -181,6 +182,7 @@
                                 <field name="is_formato" invisible="1"/>
                                 <field name="is_bobina" invisible="1"/>
                                 <field name="is_pieballet" invisible="1"/>
+				<field name="is_flatboard" invisible="1"/>
                                 <field name="is_varios" invisible="1"/>
                             </group>
                             <group>
