--- a/punt_eltete/views/product_template.xml
+++ b/punt_eltete/views/product_template.xml
@@ -11,86 +11,17 @@
 
 				</header>
 				<sheet>
-					<group>
-							<field name="name"/>
-							<field name="type"/>
-							<field name="categ_id" domain="[('product_type','=',True)]" options="{'no_create': True, 'no_create_edit':True}"/>
-							<field name="sale_ok"/>
-							<field name="purchase_ok"/>
-                            <field name="attribute_id" readonly="1"/>
-                            <field name="referencia_cliente_id" readonly="1"/>
-                            <field name="referencia_id" readonly="1"/>
-                        </group>
-                        
-                        <div attrs="{'invisible': [('referencia_id', '!=', False)]}">
-                            <br/><br/><h3>Referencia</h3>
-                        </div>
-                        <group attrs="{'invisible': [('referencia_id', '!=', False)]}">
-                            <field name="is_cantonera" invisible="1"/>
-                            <field name="is_perfilu" invisible="1"/>
-                            <field name="is_slipsheet" invisible="1"/>
-                            <field name="is_solidboard" invisible="1"/>
-                            <field name="is_formato" invisible="1"/>
-                            <field name="is_bobina" invisible="1"/>
-                            <field name="is_pieballet" invisible="1"/>
-			    <field name="is_flatboard" invisible="1"/>
-                            <field name="is_varios" invisible="1"/>
-							<field name="is_mprima_papel" invisible="1"/>
-                            
-                            <field name='pie'  attrs="{'invisible': [('is_pieballet', '=', False)]}"/>
-                            <field name='ala_1' attrs="{'invisible': [('is_cantonera', '=', False),('is_perfilu', '=', False),('is_slipsheet', '=', False),]}"/>
-                            <field name='ancho' attrs="{'invisible': ['|',('is_cantonera', '=', True),('is_pieballet', '=', True),]}"/>
-                            <field name='ala_2' attrs="{'invisible': [('is_cantonera', '=', False),('is_perfilu', '=', False),('is_slipsheet', '=', False),]}"/>
-                            <field name='grosor_2' attrs="{'invisible': [('is_cantonera', '=', False),('is_perfilu', '=', False),]}" />
-                            <field name='ala_3' attrs="{'invisible': [('is_slipsheet', '=', False)]}"/>
-                            <field name='longitud' attrs="{'invisible': [('is_bobina', '=', True)]}"/>
-                            <field name='grosor_1' attrs="{'invisible': [('is_slipsheet', '=', False),('is_solidboard', '=', False),]}" />
-                            <field name='ala_4' attrs="{'invisible': [('is_slipsheet', '=', False)]}"/>
-                            <field name='diametro'  attrs="{'invisible': [('is_bobina', '=', False)]}"/>
-                            <field name='gramaje' attrs="{'invisible': [('is_formato', '=', False),('is_bobina', '=', False),]}"/>
-                            <field name='tipo_varios_id'  attrs="{'invisible': [('is_varios', '=', False)]}"/>
-							<field name='papel'  attrs="{'invisible': [('is_mprima_papel', '=', False)]}"/>
-							<field name='fsc_tipo'  attrs="{'invisible': [('is_mprima_papel', '=', False)]}"/>
-							<field name='fsc_valor'  attrs="{'invisible': [('is_mprima_papel', '=', False)]}"/>
-                        </group>
-                        
-                        <group attrs="{'invisible': [('referencia_id', '!=', False)]}">
-                            <button name="create_product_referencia" type="object" string="Crear / buscar referencia" />
-                        </group>
-                        
-                        <br/><br/><h3>Campos atributo</h3>
-                        <group>
-                            <field name='cantonera_color_id' options="{'no_create': True, 'no_create_edit':True}" attrs="{'invisible': [('is_cantonera', '=', False)]}"/>
-                            <field name='cantonera_forma_id' options="{'no_create': True, 'no_create_edit':True}" attrs="{'invisible': [('is_cantonera', '=', False)]}"/>
-                            <field name='cantonera_especial_id' options="{'no_create': True, 'no_create_edit':True}" attrs="{'invisible': [('is_cantonera', '=', False)]}"/>
-                            <field name='cantonera_impresion_id' options="{'no_create': True, 'no_create_edit':True}" attrs="{'invisible': [('is_cantonera', '=', False)]}"/>
-                            <field name='perfilu_color_id' options="{'no_create': True, 'no_create_edit':True}" attrs="{'invisible': [('is_perfilu', '=', False)]}"/>
-                            <field name='plancha_color_id' options="{'no_create': True, 'no_create_edit':True}" attrs="{'invisible': [('is_solidboard', '=', False)]}"/>
-                            <field name='papel_calidad_id' options="{'no_create': True, 'no_create_edit':True}" attrs="{'invisible': [('is_formato', '=', False),('is_bobina', '=', False),]}"/>
-                            <field name='troquelado_id' options="{'no_create': True, 'no_create_edit':True}" attrs="{'invisible': [('is_slipsheet', '=', False),('is_solidboard', '=', False),('is_formato', '=', False),]}"/>
-                            <field name='inglete_id' options="{'no_create': True, 'no_create_edit':True}" attrs="{'invisible': [('is_cantonera', '=', False),('is_perfilu', '=', False),]}"/>
-                            <field name='inglete_num' attrs="{'invisible': [('is_cantonera', '=', False),('is_perfilu', '=', False),]}"/>
-                            <field name='fsc_id' options="{'no_create': True, 'no_create_edit':True}"/>
-                            <field name='reciclable_id' options="{'no_create': True, 'no_create_edit':True}"/>
-							<field name="cantonera_1"/>
-							<field name="cantonera_2"/>
-							<field name="cantonera_3"/>
-							<field name="cantonera_4"/>
-							<field name="sierra"/>
-                        </group>
-						
-						<br/><br/><h3>Alta de stock</h3>
-                        <group>
-							<p>En caso de varios pallets, hay que separar los números de pallet por ;</p>
-							<field name="lotes_alta"/>
-							<field name="fecha_entrada_lotes"/>
-                        </group>
-					
+				    <group>
+				        <field name="name"/>
+					<field name="type"/>
+					<field name="categ_id" domain="[('product_type','=',True)]" options="{'no_create': True, 'no_create_edit':True}"/>
+					<field name="sale_ok"/>
+					<field name="purchase_ok"/>
+                                   </group>	
 				</sheet>
 			</form>
 		</field>
 	</record>
-
 
 	<record model="ir.actions.act_window" id="action_product_template_eltete_alta">
             <field name="name">Alta de productos</field>
@@ -98,12 +29,10 @@
             <field name="view_type">form</field>
             <field name="view_mode">tree,form</field>
         </record>
-        
-        
+
         <menuitem name="Alta de productos" parent="sale.product_menu_catalog" id="menu_product_template_eltete_alta" action="action_product_template_eltete_alta" sequence="99"/>
         
-
-
+	
     <record id="view_product_template_eltete_form" model="ir.ui.view">
         <field name="name">product.template.eltete.form</field>
         <field name="model">product.template</field>
@@ -112,74 +41,19 @@
         
                 <xpath expr="//page[@name='general_information']" position="after">
                 
-                    <page name="variants" string="El Tete">
+                    <page name="variants" string="BEMECO PACK">
                     
                         <group>
-                            <field name="attribute_id" readonly="1"/>
-                            <field name="referencia_cliente_id" readonly="1"/>
                             <field name="referencia_id" readonly="1"/>
                         </group>
-                        
-                        <div attrs="{'invisible': [('referencia_id', '!=', False)]}">
-                            <br/><br/><h3>Referencia</h3>
-                        </div>
-                        <group attrs="{'invisible': [('referencia_id', '!=', False)]}">
-                            <field name="is_cantonera" invisible="1"/>
-                            <field name="is_perfilu" invisible="1"/>
-                            <field name="is_slipsheet" invisible="1"/>
-                            <field name="is_solidboard" invisible="1"/>
-                            <field name="is_formato" invisible="1"/>
-                            <field name="is_bobina" invisible="1"/>
-                            <field name="is_pieballet" invisible="1"/>
-			    <field name="is_flatboard" invisible="1"/>
-                            <field name="is_varios" invisible="1"/>
-							<field name="is_mprima_papel" invisible="1"/>
-                            
-                            <field name='pie'  attrs="{'invisible': [('is_pieballet', '=', False)]}"/>
-                            <field name='ala_1' attrs="{'invisible': [('is_cantonera', '=', False),('is_perfilu', '=', False),('is_slipsheet', '=', False),]}"/>
-                            <field name='ancho' attrs="{'invisible': ['|',('is_cantonera', '=', True),('is_pieballet', '=', True),]}"/>
-                            <field name='ala_2' attrs="{'invisible': [('is_cantonera', '=', False),('is_perfilu', '=', False),('is_slipsheet', '=', False),]}"/>
-                            <field name='grosor_2' attrs="{'invisible': [('is_cantonera', '=', False),('is_perfilu', '=', False),]}" />
-                            <field name='ala_3' attrs="{'invisible': [('is_slipsheet', '=', False)]}"/>
-                            <field name='longitud' attrs="{'invisible': [('is_bobina', '=', True)]}"/>
-                            <field name='grosor_1' attrs="{'invisible': [('is_slipsheet', '=', False),('is_solidboard', '=', False),]}" />
-                            <field name='ala_4' attrs="{'invisible': [('is_slipsheet', '=', False)]}"/>
-                            <field name='diametro'  attrs="{'invisible': [('is_bobina', '=', False)]}"/>
-                            <field name='gramaje' attrs="{'invisible': [('is_formato', '=', False),('is_bobina', '=', False),]}"/>
-                            <field name='tipo_varios_id'  attrs="{'invisible': [('is_varios', '=', False)]}"/>
-                        </group>
-                        
-                        <group attrs="{'invisible': [('referencia_id', '!=', False)]}">
-                            <button name="create_product_referencia" type="object" string="Crear / buscar referencia" />
-                        </group>
-                        
-                        <br/><br/><h3>Campos atributo</h3>
-                        <group>
-                            <field name='cantonera_color_id' options="{'no_create': True, 'no_create_edit':True}" attrs="{'invisible': [('is_cantonera', '=', False)]}"/>
-                            <field name='cantonera_forma_id' options="{'no_create': True, 'no_create_edit':True}" attrs="{'invisible': [('is_cantonera', '=', False)]}"/>
-                            <field name='cantonera_especial_id' options="{'no_create': True, 'no_create_edit':True}" attrs="{'invisible': [('is_cantonera', '=', False)]}"/>
-                            <field name='cantonera_impresion_id' options="{'no_create': True, 'no_create_edit':True}" attrs="{'invisible': [('is_cantonera', '=', False)]}"/>
-                            <field name='perfilu_color_id' options="{'no_create': True, 'no_create_edit':True}" attrs="{'invisible': [('is_perfilu', '=', False)]}"/>
-                            <field name='plancha_color_id' options="{'no_create': True, 'no_create_edit':True}" attrs="{'invisible': [('is_solidboard', '=', False)]}"/>
-                            <field name='papel_calidad_id' options="{'no_create': True, 'no_create_edit':True}" attrs="{'invisible': [('is_formato', '=', False),('is_bobina', '=', False),]}"/>
-                            <field name='troquelado_id' options="{'no_create': True, 'no_create_edit':True}" attrs="{'invisible': [('is_slipsheet', '=', False),('is_solidboard', '=', False),('is_formato', '=', False),]}"/>
-                            <field name='inglete_id' options="{'no_create': True, 'no_create_edit':True}" attrs="{'invisible': [('is_cantonera', '=', False),('is_perfilu', '=', False),]}"/>
-                            <field name='inglete_num' attrs="{'invisible': [('is_cantonera', '=', False),('is_perfilu', '=', False),]}"/>
-                            <field name='fsc_id' options="{'no_create': True, 'no_create_edit':True}"/>
-                            <field name='reciclable_id' options="{'no_create': True, 'no_create_edit':True}"/>
-			    <field name="cantonera_1"/>
-			    <field name="cantonera_2"/>
-			    <field name="cantonera_3"/>
-			    <field name="cantonera_4"/>
-			    <field name="sierra"/>
-                        </group>
-                    
+ 
                     </page>
                 </xpath>
 
         </field>
     </record>
     
+	
     
     <record id="view_product_category_form_eltete" model="ir.ui.view">
         <field name="name">product.category.form.eltete</field>
